# multicore

./: CMakeLists.txt  README.md  pm_static.yml  priv.pem  prj.conf  sample.yaml  sysbuild.cmake
child_image/: mcuboot.conf
netcore/: CMakeLists.txt  pm_static.yml  prj.conf
netcore/child_image/: mcuboot.conf
netcore/src/: main.c
src/: main.c
